--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ rel="stylesheet"/>
         </nav >
         <ul class="auth-nav">
             <li class="item">
+                
                 <a href="mailto:info@example.com" class="mail-nav">info@example.com</a>
             </li>
              <li class="item">
@@ -45,6 +46,8 @@ rel="stylesheet"/>
     </header>
 <!--шапка-->
 <main>
+    <div class="overlay">
+   
     <section class="hero">
         <div class="conteiner ">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
@@ -52,6 +55,7 @@ rel="stylesheet"/>
     
         </div>
         </section>
+    </div>
     <!--Особливості-->
     <section class="section">
         <div class="conteiner ">
