--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@ rel="stylesheet"/>
 <body>
 
 <!--верхня лінія-->
-<header class="page-header-portfolio">
+<header class="page-header">
     <div class="conteiner page-header-conteiner">
     <nav class="page-header-conteiner">
         <a href="./index.html">
@@ -23,10 +23,10 @@ rel="stylesheet"/>
         </a>
             <ul class="site-nav">
             <li class="item">
-                <a href="./index.html" class="link ">Студія</a>
+                <a href="./index.html" class="link current">Студія</a>
             </li>
             <li class="item">
-                <a href="./portfolio.html" class="link current">Портфоліо</a>
+                <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
             <li class="item">
                 <a href="#" class="link">Контакти</a> 
@@ -35,10 +35,22 @@ rel="stylesheet"/>
     </nav >
     <ul class="auth-nav">
         <li class="item">
-            <a href="mailto:info@example.com" class="mail-nav">info@example.com</a>
+             <a href="mailto:info@example.com" class="mail-nav">
+             <svg class="item-icon-mail" 
+             width="16" 
+             height ="12" 
+             aria-label="конверт">
+                <use href="./images/icon.svg#icon-mail"></use>
+             </svg>info@example.com</a>
         </li>
          <li class="item">
-            <a href="tel:+380991111111" class="tel-nav">+380991111111</a>
+            <a href="tel:+380991111111" class="tel-nav">
+               <svg class="item-icon-tel" 
+               width="10" 
+               height ="16" 
+               aria-label="телефон">
+                <use href="./images/icon.svg#icon-phone"></use>
+               </svg>+380991111111</a>
         </li>
     </ul>
 </div>   
@@ -153,31 +165,75 @@ rel="stylesheet"/>
  </main>
 <!-- Підвал -->
 <footer class="address">
-    <div class="conteiner ">
-  <a href="./index.html">
+    <div class="conteiner footer-conteiner">
+        <div class="conteiner-adress">
+<a href="./index.html">
         <span class="logo logo-web">Web</span><span class="logo logo-footer">Studio</span> 
     </a>
-    <address class="address-top">
-                <ul>
-                <li class="address-list">
-                    <a class="address-link mailto" 
-                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
-                    target="_blank" 
-                    rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+    <div class="address-footer">
+        <address class="address-top">
+            <ul>
+            <li class="address-list">
+                <a class="address-link mailto" 
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
+                target="_blank" 
+                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li class="address-list">
+                <a class="address-link" 
+                href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="address-list">
+                <a class="address-link" 
+                href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+        </ul>
+    </div>
+</address>  
+        </div>
+  
+            <div class="cocial-adress">
+            <h3 class="cocial-footer-title">ПРИЄДНУЙТЕСЬ</h3>
+            <ul class="social-list">
+                <li>
+                    <a href="#" class="social-list-link filter">
+                        <svg class="social-list-icon "
+                        aria-label="інстаграм">
+                            <use href="./images/icon.svg#icon-instagram">
+                           </use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="address-list">
-                    <a class="address-link" 
-                    href="mailto:info@example.com">info@example.com</a>
+                <li>
+                    <a href="#" class="social-list-link filter">
+                        <svg class="social-list-icon"
+                        aria-label="твітер">
+                            <use href="./images/icon.svg#icon-twitter">  
+                            </use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="address-list">
-                    <a class="address-link" 
-                    href="tel:+380991111111">+38 099 111 11 11</a>
+                <li>
+                    <a href="#" class="social-list-link filter">
+                        <svg class="social-list-icon"
+                        aria-label="фейсбук">
+                            <use href="./images/icon.svg#icon-facebook">
+                       </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="social-list-link filter">
+                        <svg class="social-list-icon"
+                        aria-label="лінкедин">
+                            <use href="./images/icon.svg#icon-linkedin">                                 
+                            </use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
-        
-    </address>
-    </div>
-  
+            </div>
+  </div>
 </footer>
 </body>
 </html>
