--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ rel="stylesheet"/>
                 width="70" 
                 height ="70" 
                 aria-label="супутник">
-                    <use href="../images/icon.svg#icon-satellite"></use>
+                    <use href="./images/icon.svg#icon-satellite"></use>
                 </svg>
                 </div>
                 <h3 class="features-title">Увага до деталей</h3>
@@ -91,7 +91,7 @@ rel="stylesheet"/>
                 width="70" 
                 height ="70" 
                 aria-label="годинник">
-                    <use href="/images/icon.svg#icon-clock"></use>
+                    <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
             </div>
                <h3 class="features-title">Пунктуальність</h3>
@@ -104,7 +104,7 @@ rel="stylesheet"/>
                 width="70" 
                 height ="70" 
                 aria-label="статистика">
-                    <use href="/images/icon.svg#icon-satellite"></use>
+                    <use href="./images/icon.svg#icon-satellite"></use>
                 </svg>
             </div>
                 <h3 class="features-title">Планування</h3>
@@ -117,7 +117,7 @@ rel="stylesheet"/>
                 width="70" 
                 height ="70" 
                 aria-label="астронавт">
-                    <use href="/images/icon.svg#icon-astronaut"></use>
+                    <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
             </div>
                     <h3 class="features-title">Сучасні технології</h3>
