--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@ rel="stylesheet"/>
         </a>
             <ul class="site-nav">
             <li class="item">
-                <a href="./index.html" class="link current">Студія</a>
+                <a href="./index.html" class="link">Студія</a>
             </li>
             <li class="item">
-                <a href="./portfolio.html" class="link">Портфоліо</a>
+                <a href="./portfolio.html" class="link current">Портфоліо</a>
             </li>
             <li class="item">
                 <a href="#" class="link">Контакти</a> 
@@ -79,7 +79,7 @@ rel="stylesheet"/>
         </ul>
         <ul class="portfolio-list ">
             <li class="portfolio-cards">
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img8.jpg" alt="ноутбук">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Технокряк</h2>
@@ -88,7 +88,7 @@ rel="stylesheet"/>
                 </a>                
             </li>
             <li class="portfolio-cards">
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img9.jpg" alt="гра в баскетбол">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -97,7 +97,7 @@ rel="stylesheet"/>
             </a>                 
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img10.jpg" alt="логотип">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -106,7 +106,7 @@ rel="stylesheet"/>
             </a>                
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img11.jpg" alt="навушники">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Проєкт Prime</h2>
@@ -115,7 +115,7 @@ rel="stylesheet"/>
                 </a>
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img  src="./images/img12.jpg" alt="коробки">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Проєкт Boxes</h2>
@@ -124,7 +124,7 @@ rel="stylesheet"/>
                 </a>
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img  src="./images/img13.jpg" alt="комп'ютер">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -133,7 +133,7 @@ rel="stylesheet"/>
                 </a>  
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img14.jpg" alt="книга">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Видання Limited Edition</h2>
@@ -142,7 +142,7 @@ rel="stylesheet"/>
                 </a>
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img15.jpg" alt="бірка">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Проєкт LAB</h2>
@@ -151,7 +151,7 @@ rel="stylesheet"/>
                 </a>                
             </li>
             <li class="portfolio-cards"> 
-                <a href="#">
+                <a href="#" class="portfolio-cards-link">
                 <img src="./images/img16.jpg" alt="руки на ноутбуці">
                 <div class="portfolio-div">
                 <h2 class="portfolio-title">Growing Business</h2>
@@ -193,10 +193,11 @@ rel="stylesheet"/>
         </div>
   
             <div class="cocial-adress">
-            <h3 class="cocial-footer-title">ПРИЄДНУЙТЕСЬ</h3>
+                <p class="cocial-footer-title">приєднуйтесь</p>
+            
             <ul class="social-list">
                 <li>
-                    <a href="#" class="social-list-link filter">
+                    <a href="#" class="social-list-footer">
                         <svg class="social-list-icon "
                         aria-label="інстаграм">
                             <use href="./images/icon.svg#icon-instagram">
@@ -205,7 +206,7 @@ rel="stylesheet"/>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="social-list-link filter">
+                    <a href="#" class="social-list-footer">
                         <svg class="social-list-icon"
                         aria-label="твітер">
                             <use href="./images/icon.svg#icon-twitter">  
@@ -214,7 +215,7 @@ rel="stylesheet"/>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="social-list-link filter">
+                    <a href="#" class="social-list-footer">
                         <svg class="social-list-icon"
                         aria-label="фейсбук">
                             <use href="./images/icon.svg#icon-facebook">
@@ -223,7 +224,7 @@ rel="stylesheet"/>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="social-list-link filter">
+                    <a href="#" class="social-list-footer">
                         <svg class="social-list-icon"
                         aria-label="лінкедин">
                             <use href="./images/icon.svg#icon-linkedin">                                 
